--- a/style/darknoon.css
+++ b/style/darknoon.css
@@ -43,6 +43,19 @@ p code, li code {
 	font-size: 24px;
 	letter-spacing: 1px;
 	color: #060248;
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+#content p {
+}
+
+#content p.date {
+	font-size: 12px;
+	text-transform: uppercase;
+	color: #c2c5cc;
+	padding-top: 0;
+	margin-top: 5px;
 }
 
 a:link {
@@ -59,10 +72,10 @@ a:link {
 
 #navigation ul {
 	background: url(logo.png) top left no-repeat;
-	width: 450px;
+	width: 480px;
 	margin: auto;
 	height: 64px;
-	padding-left: 200px;
+	padding-left: 197px;
 }
 
 #navigation li {
@@ -77,4 +90,9 @@ a:link {
 
 #navigation li a {
 	text-decoration: none;
+	color: #aaafc8;
+}
+
+#navigation li a.current {
+	color: #000949;
 }
