Add retina js file.

--- a/_includes/style.html
+++ b/_includes/style.html
@@ -3,3 +3,4 @@
 <script src="/style/jquery/jquery-1.7.1.min.js"></script>
 <script src="/style/jquery/jquery.zclip.min.js"></script>
 <script src="/style/darknoon.js"></script>
+<script src="/style/retina.js"></script>
