--- a/style/darknoon.css
+++ b/style/darknoon.css
@@ -1,4 +1,4 @@
-/* @override http://0.0.0.0:4000/style/darknoon.css */
+/* @override http://localhost:4000/style/darknoon.css */
 
 /* Fonts */
 
@@ -35,7 +35,7 @@ p code, li code {
 
 #content {
 	width: 650px;
-	margin: 100px auto 0px;
+	margin: 10px auto 0px;
 }
 
 #content h1 {
@@ -71,7 +71,6 @@ a:link {
 	width: 100%;
 	height: 100px;
 	top: 0px;
-	position: fixed;
 }
 
 #navigation ul {
@@ -111,7 +110,13 @@ only screen and (min-device-pixel-ratio: 2) {
 #navigation li a {
 	text-decoration: none;
 	color: #aaafc8;
+	-webkit-transition: color 0.2s ease-in-out;
 }
+
+#navigation li a:hover {
+	color: #3f4668;
+}
+
 
 #navigation li a.current {
 	color: #000949;
