--- a/style/darknoon.css
+++ b/style/darknoon.css
@@ -39,12 +39,15 @@ p code, li code {
 }
 
 #content h1 {
-	text-transform: uppercase;
 	font-size: 24px;
 	letter-spacing: 1px;
 	color: #060248;
+	margin-top: 50px;
 	margin-bottom: 0;
 	padding-bottom: 0;
+}
+
+#content h1 a {
 }
 
 #content p {
@@ -58,6 +61,9 @@ p code, li code {
 	margin-top: 5px;
 }
 
+h1,h2,h3,h4 {
+	font-weight: normal;
+}
 p.center {
 	text-align: center;	
 }
@@ -69,7 +75,7 @@ a:link {
 #navigation {
 	background: url(top-background.png) no-repeat center top;
 	width: 100%;
-	height: 100px;
+	height: 90px;
 	top: 0px;
 }
 
