--- a/style/posts/about.css
+++ b/style/posts/about.css
@@ -6,7 +6,79 @@
 	padding-top: 10px;
 }
 
+.leftside p {
+	margin-top: 3px;
+}
+
 .rightside {
 	margin-left: 340px;
 	padding-top: 1px;
+}
+
+a#dribbble, a#twitter, a#github {
+	display: inline-block;
+	text-decoration: none;
+	padding: 2px 9px 0;
+	-webkit-border-radius: 1337px;
+}
+
+a#dribbble {
+	color: #630666;
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(144, 12, 172, 0.35);
+	background: -moz-linear-gradient(90deg, #e3b1e3 0%, #f1e0f5 100%) #e3b7e2;
+	background: -webkit-gradient(linear, left bottom, left top, from(#e3b1e3), to(#f1e0f5)) #e3b7e2;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.49);
+	-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(144, 12, 172, 0.35);
+	-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(144, 12, 172, 0.35);
+}
+
+a#dribbble:hover {
+	color: #c120c7;
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(144, 12, 172, 0.18);
+	background: -moz-linear-gradient(90deg, #f9e1f9 0%, #fefffe 100%) #e3b7e2;
+	background: -webkit-gradient(linear, left bottom, left top, from(#f9e1f9), to(#fefffe)) #e3b7e2;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.49);
+	-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(144, 12, 172, 0.18);
+	-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(144, 12, 172, 0.18);
+}
+
+
+a#twitter {
+color: #1551bd;
+box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(12, 34, 172, 0.35);
+background: -moz-linear-gradient(90deg, #77ace5 0%, #ddf0fc 100%) #b7d4e3;
+background: -webkit-gradient(linear, left bottom, left top, from(#77ace5), to(#ddf0fc)) #b7d4e3;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.49);
+-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(12, 34, 172, 0.35);
+-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(12, 34, 172, 0.35);
+}
+
+a#twitter:hover {
+color: #4183fa;
+box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(15, 108, 236, 0.35);
+background: -moz-linear-gradient(90deg, #84d3fe 0%, #d6f4fe 100%) #b7d4e3;
+background: -webkit-gradient(linear, left bottom, left top, from(#84d3fe), to(#d6f4fe)) #b7d4e3;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.49);
+-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(15, 108, 236, 0.35);
+-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(15, 108, 236, 0.35);
+}
+
+a#github {
+color: #606060;
+box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(0, 0, 0, 0.35);
+background: -moz-linear-gradient(90deg, #b2b2b2 0%, #e3e3e3 100%) #8a8a8a;
+background: -webkit-gradient(linear, left bottom, left top, from(#b2b2b2), to(#e3e3e3)) #8a8a8a;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.25);
+-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(0, 0, 0, 0.35);
+-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(0, 0, 0, 0.35);
+}
+
+a#github:hover {
+color: #606060;
+box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(0, 0, 0, 0.14);
+background: -moz-linear-gradient(90deg, #d4d4d4 0%, #f8f8f8 100%) #cfcfcf;
+background: -webkit-gradient(linear, left bottom, left top, from(#d4d4d4), to(#f8f8f8)) #cfcfcf;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.25);
+-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(0, 0, 0, 0.14);
+-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(0, 0, 0, 0.14);
 }
