--- a/style/posts/about.css
+++ b/style/posts/about.css
@@ -15,6 +15,10 @@
 	padding-top: 1px;
 }
 
+.rightside h2 {
+	display: none;
+}
+
 a#dribbble, a#twitter, a#github {
 	display: inline-block;
 	text-decoration: none;
