--- a/style/posts/about.css
+++ b/style/posts/about.css
@@ -19,7 +19,7 @@
 	display: none;
 }
 
-a#dribbble, a#twitter, a#github {
+a#dribbble, a#twitter, a#github, a#stackoverflow {
 	display: inline-block;
 	text-decoration: none;
 	padding: 2px 9px 0;
@@ -85,4 +85,24 @@ background: -webkit-gradient(linear, left bottom, left top, from(#d4d4d4), to(#f
 text-shadow: 0 1px 1px rgba(255, 255, 255, 0.25);
 -moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(0, 0, 0, 0.14);
 -webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(0, 0, 0, 0.14);
+}
+
+a#stackoverflow {
+color: #ff6a0c;
+box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(131, 10, 10, 0.49);
+background: -moz-linear-gradient(90deg, #fd9400 0%, #ffbe1f 100%) #fb9c00;
+background: -webkit-gradient(linear, left bottom, left top, from(#fd9400), to(#ffbe1f)) #fb9c00;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.25);
+-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(131, 10, 10, 0.49);
+-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.29), inset 0 1px 3px rgba(131, 10, 10, 0.49);
+}
+
+a#stackoverflow:hover {
+color: #f28800;
+box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(227, 0, 0, 0.14);
+background: -moz-linear-gradient(90deg, #ffc970 0%, #ffe7b9 100%) #fdc610;
+background: -webkit-gradient(linear, left bottom, left top, from(#ffc970), to(#ffe7b9)) #fdc610;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.25);
+-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(227, 0, 0, 0.14);
+-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.41), inset 0 1px 3px rgba(227, 0, 0, 0.14);
 }
