Add ganshup images, adjust site theme

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -79,7 +79,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: var(--code-font);
   font-size: 1em;
 }
 figure {
@@ -562,8 +562,7 @@ tt,
 code {
   background-color: hsla(0, 0%, 0%, 0.04);
   border-radius: 3px;
-  font-family: 'SFMono-Regular', Consolas, 'Roboto Mono', 'Droid Sans Mono',
-    'Liberation Mono', Menlo, Courier, monospace;
+  font-family: var(--code-font);
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
