Remove ML overlay, adjust background

--- a/src/components/colors.css
+++ b/src/components/colors.css
@@ -3,7 +3,7 @@
   color-scheme: light dark;
   --headline: black;
   --text: #333;
-  --background: #e5e5e5;
+  --background: #f3f3f3;
   --highlight: #da19c6;
   --accent-1: #3300ff;
   --accent-2: #cf16d2;
